--- a/_posts/2019-05-31-喜欢水的姑娘.md
+++ b/_posts/2019-05-31-喜欢水的姑娘.md
@@ -11,4 +11,4 @@ tags:
     - 洋
 ---
 
-width="400" height="200" src="https://github.com/jimshou/jimshou.github.io/blob/master/img/ocean.mp4" allowfullscreen="">
+<video src="https://github.com/jimshou/jimshou.github.io/blob/master/img/ocean.mp4" width="320" height="180" controls="controls"></video>
