--- a/_posts/2019-05-31-喜欢水的姑娘.md
+++ b/_posts/2019-05-31-喜欢水的姑娘.md
@@ -1,14 +1,28 @@
 ---
 layout:     post
-title:       
-subtitle:   
+title:       健康&陪伴
+subtitle:   健康是幸福的基础，陪伴是幸福的掌舵者。
 date:       2019-05-31
 author:     Frederick
-header-img: img/zhizu3.jpg
+header-img: img/0531_02.jpg
 catalog: true
 tags:
     - 生活
     - 洋
 ---
 
-<video src="https://github.com/jimshou/jimshou.github.io/blob/master/img/ocean.mp4" width="320" height="180" controls="controls"></video>
+```
+真正的幸福在于 陪伴自己的人&健康的身体
+```
+
+记得一开始你给我说：“你知道一个人的时候最痛苦的事情是什么吗？”
+我当时沉思了一会，还没有说出口。你便说：“是生病的时候，一个人去医院看医生，一个人打针。你能想象那种情景不？”。
+我又呆了一会。因为之前都是室友在一块生活着左右生病有事情都是有人一起。不过想想确实挺难受的，当时只能说相见恨晚吧，让你一个人辛苦了。从那以后我也想着你以后的生活由我来负责照顾，让你不再孤单，不会再出现你一个人去医院看医生。
+
+![](https://github.com/FrederickHou/FrederickHou.github.io/blob/master/img/0531_01.jpg?raw=true)
+
+说来很突然，前一天走的时候还好着，第二天你就生病了，最害怕没有明确性的吃药或者治疗，没有过几天手指又出现过敏现象了。看到你的手心里除了心疼就是心疼，虽然要去加班，记起之前的做法工作最大，但是现在只有你最大，陪着你去看医生排队。说来真的很巧也是自己第一次这么陪着女生来医院看病，具体的流程心里还挺慌，怕不懂流程而导致手忙脚乱。不过还好一直到陪你等待叫号，那时等待虽然漫长但是我觉得所谓的陪伴就是如此，在你需要我的时候有我在。并且又一次体会到健康的重要性，尤其是自己心爱的你还有我们的家人们。健康就是幸福～
+
+![](https://github.com/FrederickHou/FrederickHou.github.io/blob/master/img/0531_03.jpg?raw=true)
+
+这周我们虽然是七天但是发生了很多繁杂的事情，出乎意料，或是心烦意乱。怎么说来着，不经历风雨怎能见彩虹呢？虽然在我看来这不是什么坎坷，但是或多或少影响了我们的生活烦扰了我们的思绪。事情都是把双刃剑，这周更加促进了我们的相互了解和亲密。虽说我们的开始的时间不是什么优势或者是一个可能被别人侵入击破点。但是我们对彼此的信心都没有减退，反倒我们信心倍增。你的处事方式总是那么恰当合适，我再喜欢不过了。两个人在一块能长久和开花结果脾气性格的融洽是占据一大半的分量。今天是五月的尾巴，明天是六月的彩头。也是一年二分之一的时间马上过去，我们在一起的时间也在不断增长，是积累也是了解也是陪伴。给五月画上圆满的句号，给六月一个满满的期待。就像你站在那，你一直都在，我也一直都在。
