--- a/_posts/2019-05-31-健康&幸福.md
+++ b/_posts/2019-05-31-健康&幸福.md
@@ -25,4 +25,4 @@ tags:
 
 ![](https://github.com/jimshou/jimshou.github.io/blob/master/img/0531_03.jpg?raw=true)
 
-这周我们虽然是七天但是发生了很多繁杂的事情，出乎意料，或是心烦意乱。怎么说来着，不经历风雨怎能见彩虹呢？虽然在我看来这不是什么坎坷，但是或多或少影响了我们的生活烦扰了我们的思绪。事情都是把双刃剑，这周更加促进了我们的相互了解和亲密。虽说我们的开始的时间不是什么优势或者是一个可能被别人侵入击破点。但是我们对彼此的信心都没有减退，反倒我们信心倍增。你的处事方式总是那么恰当合适，我再喜欢不过了。两个人在一块能长久和开花结果脾气性格的融洽是占据一大半的分量。今天是五月的尾巴，明天是六月的彩头。也是一年二分之一的时间马上过去，我们在一起的时间也在不断增长，是积累也是了解也是陪伴。给五月画上圆满的句号，给六月一个满满的期待。就像你站在那，你一直都在，我也一直都在。
+这周我们虽然是七天但是发生了很多繁杂的事情，出乎意料，或是心烦意乱。怎么说来着，不经历风雨怎能见彩虹呢？虽然在我看来这不是什么坎坷，但是或多或少影响了我们的生活烦扰了我们的思绪。事情都是把双刃剑，这周更加促进了我们的相互了解和亲密。虽说我们的开始的时间不是什么优势或者是一个可能被别人侵入的击破点。但是我们对彼此的信心都没有减退，反倒我们信心倍增。你的处事方式总是那么恰当合适，我再喜欢不过了。两个人在一块能长久和最终能够开花结果，脾气性格的融洽是占据一大半的分量。今天是五月的尾巴，明天是六月的彩头。也是一年二分之一的时间马上过去，我们在一起的时间也在不断增长，是积累也是了解也是陪伴。给五月画上圆满的句号，给六月一个满满的期待。就像你站在那，你一直都在，我也一直都在。
