--- a/_posts/2019-06-14-众人群中寻懂得.md
+++ b/_posts/2019-06-14-众人群中寻懂得.md
@@ -4,7 +4,7 @@ title:      众人群中寻懂得
 subtitle:   一个拥抱，一种支持。
 date:       2019-06-14
 author:     Frederick
-header-img: img/0531_02.jpg
+header-img: img/huge.jpg
 catalog: true
 tags:
     - 生活
