--- a/_posts/2019-06-14-众人群中寻懂得.md
+++ b/_posts/2019-06-14-众人群中寻懂得.md
@@ -81,6 +81,14 @@ tags:
 
 想见你的人，24小时都有
 
+很多情侣说，自己为了对方付出了多少，牺牲了多少，为什么还是感动不了对方，或是为什么还是会分手。这就好比，对方明明喜欢吃苹果，你却想办法给他买了一箱上等的梨，对方也许会一时感动，但发自内心的是他不喜欢吃梨。
+
+所以懂得是至关重要的
+
+爱一个人真正舒服的状态，并把一定是成天黏在一起，而是这四字：懂得彼此
+
+每个人都有自己的一生，我希望我的一生是你。
+
 
 
 
